--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@ layout: default
 ---
 <h3>Projects</h3>
 <div class="well content-box">
+   <h4><a href="https://github.com/reedlabotz/AfterClass">After Class</a></h4>
+   <p>A system for facilitating the forming of online social groups for massive open online courses.</p>
+
+   <h4><a href="https://github.com/reedlabotz/game-off-2012">Conquerors of Gitonia</a></h4>
+   <p>A game roughly based on git concepts written in dart.</p>  
+
    <h4><a href="https://github.com/reedlabotz/udj-webclient-dart">UDJ Web Client</a></h4>
    <p>A web app written in Dart which controls the UDJ Social Media Player.</p>
-
-   <h4><a href="https://github.com/reedlabotz/MOOCSocial">MOOC Social</a></h4>
-   <p>A system for facilitating the forming of online social groups for massive open online courses.</p> 
 
    <h4><a href="https://github.com/reedlabotz/liquid">Liquid (ACM@UIUC Web Site)</a></h4>
    <p>Web site for ACM@UIUC, one of the largest student chapters in the country, written in Django. This project worked to replace an old system that was out of date as well as to combine many existing systems in to a single more maintainable one.</p>
