Add senior thesis

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h3>Projects</h3>
 <div class="well content-box">
-   <h4><a href="https://github.com/reedlabotz/AfterClass">After Class</a></h4>
+   <h4><a href="afterclass.html">After Class</a></h4>
    <p>A system for facilitating the forming of online social groups for massive open online courses.</p>
 
    <h4><a href="https://github.com/reedlabotz/game-off-2012">Conquerors of Gitonia</a></h4>
